test/types/scalar/kbrady/int_int16.good
-1
1
int_int16.chpl:3: error: halt reached - casting int(64) with a value less than the minimum of int(16) to int(16)
