test/types/scalar/kbrady/int_int16.chpl
writeln(safe_cast(int(16), -1:int(64)));
writeln(safe_cast(int(16), 1:int(64)));
writeln(safe_cast(int(16), min(int(64))));
